syntax = "proto3";

package ideaPackage;

service Idea {
    rpc createIdea(CreateIdeaCommand) returns (IdeaEntityState);
}

message CreateIdeaCommand {
  string title = 1;
  string description = 2;
  string userId = 3;
}

message IdeaEntityState {
  string userId = 1;
  string title = 2;
  string description = 3;
  string createdAt = 4;
  string updatedAt = 5;
  bool deleted = 6;
  string deletedAt = 7;
  string id = 8;
  int32 lastEventNumber = 9;
  string lastEventId = 10;
}