import "google/protobuf/empty.proto";

syntax = "proto3";

package notification;

service NotificationCommands {
  rpc subscribePush(SubscribePushNotificationsCommand) returns (NotificationSettingsEntityState);
  rpc updateSettings(UpdateNotificationSettingsCommand) returns (NotificationSettingsEntityState);
  rpc getSettings(GetNotificationSettingsCommand) returns (NotificationSettingsEntityState);
}

message NotificationSettingsEntityState {
  string id = 1;
  int32 lastEventNumber = 2;
  string lastEventId = 3;
  string userId = 4;
  repeated PushSubscription pushSubscriptions = 5;
  bool sendPushes = 6;
  bool sendEmails = 7;
}

message PushSubscription {
  string endpoint = 1;
  string expirationTime = 2;
  PushSubscriptionKeys keys = 3;
}

message PushSubscriptionKeys {
  string p256dh = 1;
  string auth = 2;
}

message SubscribePushNotificationsCommand {
  PushSubscription subscription = 1;
  string userId = 2;
}

message UpdateNotificationSettingsCommand {
  bool sendPushes = 1;
  bool sendEmails = 2;
  string userId = 3;
}

message GetNotificationSettingsCommand {
  string userId = 1;
}